--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,9 +8,17 @@
 @import "./partials/mixins";
 
 // reset css 
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+
+    li {
+        list-style: none;
+    }
 }
