--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 
 // bootstrap
 @import "node_modules/bootstrap/scss/bootstrap";
+// @import '~bootstrap/scss/bootstrap';
 
 // partials
 @import "./partials/variables";
