--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,13 @@
     box-sizing: border-box;
 }
 
+body {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: $color-text-primary;
+}
+
 ul {
     margin: 0;
     padding: 0;
