--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,3 +6,8 @@ $color-secondary: #00A699;
 $color-tertiary: #FC642D;
 $color-white: #FFFFFF;
 $color-black: #484848;
+
+// jumbotron
+$bg-color-dark: #2b3035;
+
+$color-text-primary: #23272b;
