--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,8 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: $color-text-primary;
+    scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
 }
 
 ul {
@@ -30,3 +32,8 @@ ul {
         list-style: none;
     }
 }
+
+.my_header_color_text {
+    color: $color-text-primary;
+  }
+  
