--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,7 +1,7 @@
 // Variabili
 
 // colori 
-$color-primary: #FF5A5F;
+$color-primary: #ff5a60f3;
 $color-secondary: #00A699;
 $color-tertiary: #FC642D;
 $color-white: #FFFFFF;
