--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,13 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+// main{
+//     background-color: #4158D0;
+//     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+// }
+
+
+
 ul {
     margin: 0;
     padding: 0;
