add changes homepage

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -16,3 +16,9 @@ $color-text-primary: #23272b;
 // background
 
 $bg-color-light: #F6F3F3;
+$bg-light-pink: #ebc3f1;
+
+//hover
+
+$headerHover: #b8b7f4;
+$headerLinks: #F802E4;
