--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,14 +5,15 @@
 // @import '~bootstrap/scss/bootstrap';
 
 // partials
-@import "./partials/variables";
-@import "./partials/mixins";
+@import "./partials/_variables.scss";
+@import "./partials/_mixins.scss";
 
 // reset css 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
 }
 
 body {
@@ -40,9 +41,9 @@ ul {
     }
 }
 
-.my_header_color_text {
-    color: $color-text-primary;
-}
+// .my_header_color_text {
+//     // color: $color-text-primary;
+// }
 
 .logo{
     height: 100px;
