Add mixins and variables

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,6 +6,7 @@ $color-secondary: #00A699;
 $color-tertiary: #FC642D;
 $color-white: #FFFFFF;
 $color-black: #484848;
+$color-lavander: #d882eb;
 
 // jumbotron
 $bg-color-dark: #2b3035;
@@ -17,6 +18,7 @@ $color-text-primary: #23272b;
 
 $bg-color-light: #F6F3F3;
 $bg-light-pink: #ebc3f1;
+
 
 //hover
 
