--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -13,12 +13,13 @@
 
 @mixin title{
     font-weight: bold;
-    background: #E7C2E5;
+    color: $color-primary;
+    /* background: #E7C2E5;
     background: -webkit-linear-gradient(to left, #E7C2E5 0%, #F802E4 55%, #7A02FA 100%);
     background: -moz-linear-gradient(to left, #E7C2E5 0%, #F802E4 55%, #7A02FA 100%);
     background: linear-gradient(to left, #E7C2E5 0%, #F802E4 55%, #7A02FA 100%);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
     // text-shadow: 1px 2px 0px #DEDEDE;
 }
 
@@ -28,13 +29,13 @@
         // justify-content: space-between;
         font-size: 1rem;
         // font-weight: bold;
-        color: $color-lavander;
+        color: $color-black;
         text-decoration: none;
         transition: all 0.3s ease-in-out;
         margin-top: -10px;
     
         &:hover {
-          color: $headerLinks;
+          color: $color-primary;
           text-decoration: none;
           transform: scale(1.2);
           transition: 0.3s;
