style show apartment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,3 +45,10 @@ ul {
 //     // color: $color-text-primary;
 // }
 
+.color-primary {
+    color: $color-primary;
+}
+
+.bg-color-primary {
+    background-color: $color-primary;
+}
