--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,37 +1,19 @@
-@mixin flex($justify: center, $align: center, $text: center) {
-    display: flex;
-    justify-content: $justify;
-    align-items: $align;
-    text-align: $text;
-}
-
-@mixin noFlex($justify: center, $align: center, $text: center) {
-    justify-content: $justify;
-    align-items: $align;
-    text-align: $text;
-}
-
 @mixin title{
     font-weight: bold;
     color: $color-primary;
 }
 
-
-@mixin linkFooter{ //hover
+@mixin linkFooter{ 
     a {
-        // justify-content: space-between;
         font-size: 1rem;
-        // font-weight: bold;
         color: $color-black;
         text-decoration: none;
         transition: all 0.3s ease-in-out;
-        margin-top: -10px;
     
         &:hover {
           color: $color-primary;
           text-decoration: none;
-          transform: scale(1.2);
-          transition: 0.3s;
+          transition: all 0.3s ease-in-out;
         }
-      }
+    }
 }
