feat and fix responsive

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,7 +6,7 @@ $color-secondary: #00A699;
 $color-tertiary: #FC642D;
 $color-white: #FFFFFF;
 $color-black: #484848;
-$color-lavander: #d882eb;
+$bg-light: #F6F3F3;
 
 // jumbotron
 $bg-color-dark: #2b3035;
