feat modal error and success

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,6 +6,7 @@ $color-secondary: #00A699;
 $color-tertiary: #FC642D;
 $color-white: #FFFFFF;
 $color-black: #484848;
+$color-success: #6bb46b;
 $bg-light: #F6F3F3;
 
 // jumbotron
